# PythonPractice

./: pyproject.toml
.github/workflows/: python-test.yaml
scripts/: Practice.py  Sorting.py  Sortings.py
scripts/classes/: class.py
